# slither-wars

./: readme.txt
client/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  readme.txt  todo.txt
client/src/: bot.rs  camera.rs  components.rs  constants.rs  enums.rs  fps.rs  game.rs  main.rs  main.ts  menu.rs  orb.rs  player.rs  resources.rs  segments.rs  settings.rs  shared.rs  style.css  systems.rs  types.ts  utils.rs  utils.ts
client/src/bot/: components.rs  mod.rs  systems.rs
client/src/core/: components.rs  mod.rs  resources.rs  systems.rs
client/src/game/: Food.ts  GameWorld.ts  Snake.ts  constants.ts  types.ts  utils.ts
client/src/leaderboard/: components.rs  mod.rs  systems.rs
client/src/network/: NetworkManager.ts  messages.ts
client/src/orb/: components.rs  mod.rs  systems.rs
client/src/player/: components.rs  mod.rs  systems.rs
client/src/plugins/: camera.rs  constants.rs  fps.rs  mod.rs
client/src/ui/: UIManager.ts  constants.rs  menu.rs  mod.rs  settings.rs
common/: Cargo.toml
protocal/: Cargo.toml
protocol/: Cargo.toml
server/: Cargo.toml
server/src/: constants.rs  errors.rs  game.rs  main.rs  messages.rs  types.rs
server/src/game/: bot.rs  food.rs  leaderboard.rs  mod.rs  snake.rs  world.rs
server/src/server/: mod.rs  websocket.rs
stages/: one.txt  stack.txt
