[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.64"
bincode = "1.3.3"
anyhow = "1.0.89"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
